@@ -1,6 +1,9 @@
 4 June 2007: Wouter
 	- random selection of equally preferred nameserver targets.
 	- reply info copy routine. Reuses existing code.
+	- cache lameness in response handling.
+	- do not touch qstate after worker_process_query because it may have
+	  been deleted by that routine.
 
 1 June 2007: Wouter
 	- normalize incoming messages. Like unbound-java, with CNAME chain
